classDiagram
  class _CipherEntry {
    <<class>>
    📁 ermes_peer_cipher.dart
  }
  class ErmesPeerCipher {
    <<class>>
    📁 ermes_peer_cipher.dart
  }
  class ErmesPeerCipherHandler {
    <<class>>
    📁 ermes_peer_cipher_handler.dart
  }
  class CipherException {
    <<class>>
    📁 exceptions.dart
  }
  class NoValidKeyException {
    <<class>>
    📁 exceptions.dart
  }
  class DecryptionFailedException {
    <<class>>
    📁 exceptions.dart
  }
  class UnsupportedAlgorithmException {
    <<class>>
    📁 exceptions.dart
  }
  class ECDHKeyExchangeService {
    <<class>>
    📁 ecdh_key_exchange_service.dart
  }
  class ECDHKeyUtilities {
    <<class>>
    📁 ecdh_key_utilities.dart
  }
  class ErmesPeerKeyExchange {
    <<class>>
    📁 ermes_peer_key_exchange.dart
  }
  class Exception {
    <<interface>>
    📁 dart:core
  }
  class ICipher {
    <<interface>>
    <<external>>
    📁 external_library
  }
  class Digest {
    <<interface>>
    <<external>>
    📁 external_library
  }
  class IErmesPeerCipher {
    <<interface>>
    <<external>>
    📁 external_library
  }
  class DataEncrypted {
    <<interface>>
    <<external>>
    📁 external_library
  }
  class Uint8List {
    <<interface>>
    <<external>>
    📁 external_library
  }
  class GenericObjectManager {
    <<interface>>
    <<external>>
    📁 external_library
  }
  class IKeyExchange {
    <<interface>>
    <<external>>
    📁 external_library
  }
  class IECDHKeyExchangeService {
    <<interface>>
    <<external>>
    📁 external_library
  }
  class CryptoAlgorithm {
    <<interface>>
    <<external>>
    📁 external_library
  }
  class KeyExchangeAlgorithm {
    <<interface>>
    <<external>>
    📁 external_library
  }
  class ISymmetricCipher {
    <<interface>>
    <<external>>
    📁 external_library
  }
  class IErmesPeerKeyExchange {
    <<interface>>
    <<external>>
    📁 external_library
  }

  CipherException <|-- DecryptionFailedException : extends
  CipherException <|-- NoValidKeyException : extends
  CipherException <|-- UnsupportedAlgorithmException : extends
  ECDHKeyExchangeService --> CryptoAlgorithm : uses
  ECDHKeyExchangeService --> IECDHKeyExchangeService : uses
  ECDHKeyExchangeService --> IKeyExchange : uses
  ECDHKeyExchangeService --> ISymmetricCipher : uses
  ECDHKeyExchangeService --> KeyExchangeAlgorithm : uses
  ECDHKeyExchangeService --> Uint8List : uses
  ECDHKeyUtilities --> IECDHKeyExchangeService : uses
  ErmesPeerCipher --> DataEncrypted : uses
  ErmesPeerCipher --> Digest : uses
  ErmesPeerCipher --> ICipher : uses
  ErmesPeerCipher --> Uint8List : uses
  ErmesPeerCipher --> _CipherEntry : uses
  ErmesPeerCipherHandler --> ErmesPeerCipherHandler : uses
  ErmesPeerKeyExchange --> CryptoAlgorithm : uses
  ErmesPeerKeyExchange --> DataEncrypted : uses
  ErmesPeerKeyExchange --> IErmesPeerCipher : uses
  ErmesPeerKeyExchange --> ISymmetricCipher : uses
  Exception <|.. CipherException : implements
  GenericObjectManager <|-- ErmesPeerCipherHandler : extends
  IECDHKeyExchangeService <|.. ECDHKeyExchangeService : implements
  IErmesPeerCipher <|.. ErmesPeerCipher : implements
  IErmesPeerKeyExchange <|.. ErmesPeerKeyExchange : implements
  IKeyExchange <|.. ECDHKeyExchangeService : implements
  _CipherEntry --> Digest : uses
  _CipherEntry --> ICipher : uses
